[package]
name = "torarticlient"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
arti-client = "0.29.0"
tokio = { version = "1.44.2", features = ["full"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
reqwest-impersonate = { git = "https://github.com/Logarithmus/reqwest-impersonate" }
tower = "*"
hyper = { version = "*", features = ["full"] }