[package]
name = "torarticlient"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
arti-client = "0.29.0"
tokio = { version = "1.44.2", features = ["full"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
reqwest = { version = "0.11", features = ["native-tls", "cookies"] }
tower = "0.4"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"