[package]
name = "unyx"
version = "0.1.0"
edition = "2024"

[dependencies]
azalea = "0.12.0"
color-eyre = "0.6.4"
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
tokio = {version = "*", features = ["full"]}
ratatui = "0.29.0"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
